# hffix-simd

./: .clang-format  .clang-format-ignore  .gitattributes  .gitignore  CLAUDE.md  CMakeLists.txt  CMakeUserPresets.json  LICENSE  README.md  conanfile.py
.github/workflows/: ci.yml
benchmarks/: CMakeLists.txt  assert_override.hpp  benchmarks.cpp
cmake/: hffix_generate_fields.cmake
docs/: CMakeLists.txt  Doxyfile
fuzz/: CMakeLists.txt  fuzz_reader.cpp
include/: hffix.hpp  hffix_fields.hpp  hffix_groups.hpp
scripts/: _sources.sh  compare2upstream.sh  compare2upstream_render.py  format-check.sh  format.sh
tests/: CMakeLists.txt  integration_tests.cpp  unit_tests.cpp
tests/data/: fix.4.2.malformed.set.1  fix.binary.with.soh.set.1
upstream-benchmarks/: CMakeLists.txt  upstream_benchmarks.cpp
utils/: CMakeLists.txt
utils/fixgen/: fixgen.cpp
utils/fixprint/: fixprint.cpp
utils/fixspec-gen-fields/: fixspec-gen-fields.cpp
